# dungeons-of-noudar

./: .gitignore  .gitmodules  License.md  README.md  mkdocs.yml
AndroidSoundSystem/: AndroidAudioSink.cpp  AndroidAudioSink.h  AudioSink.h  JNIAudio.cpp  JNIAudio.h  SoundClip.cpp  SoundClip.h  SoundEmitter.cpp  SoundEmitter.h  SoundListener.cpp  SoundUtils.cpp  SoundUtils.h
AppleSoundSystem/: SoundClip.cpp  SoundEmitter.cpp  SoundUtils.cpp
DungeonsOfNoudar-NDK/: build.gradle  local.properties  settings.gradle
DungeonsOfNoudar-NDK/app/: build.gradle
DungeonsOfNoudar-NDK/app/src/main/: AndroidManifest.xml
DungeonsOfNoudar-NDK/app/src/main/cpp/: AndroidFileLoaderDelegate.cpp  AndroidFileLoaderDelegate.h  CMakeLists.txt  NdkGlue.cpp  NdkGlue.h  android_asset_operations.cpp  android_asset_operations.h
DungeonsOfNoudar-NDK/common_includes/: android_asset_operations.h
DungeonsOfNoudar-NDK/gradle/wrapper/: gradle-wrapper.properties
DungeonsOfNoudar486/: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.DOS  Makefile.LR  Makefile.SDL  Makefile.em  Makefile.win32  events.cpp  main.cpp  packer.cpp
DungeonsOfNoudar486/DOS-version/: DOSHacks.h  LoadPNG.cpp  LoadPNG.h  WindowOperationsDOS.cpp  main.cpp
DungeonsOfNoudar486/DOSVersion/: CDOSRenderer.cpp  main.cpp
DungeonsOfNoudar486/LibRetroCoreVersion/: CLRCoreRenderer.cpp  lr_main.cpp
DungeonsOfNoudar486/OPL2LPT/: MusicDOS.cpp  MusicSDL.cpp  OPL2.cpp  OPL2.h  controller.cpp  controller.h  timer.cpp  timer.h
DungeonsOfNoudar486/SDLVersion/: CSDLRenderer.cpp  main.cpp
DungeonsOfNoudar486/Win32Version/: CGDIRenderer.cpp
DungeonsOfNoudar486/audio/: t200i101o3afo1a  t200i9o1fa
DungeonsOfNoudar486/cmake_find/: FindSDL2.cmake
DungeonsOfNoudar486/djgpp/: go32.h
DungeonsOfNoudar486/include/: CPackedFileReader.h  CRenderer.h  CTile3DProperties.h  MapWithCharKey.h  RasterizerCommon.h  RaycastCommon.h  VisibilityStrategy.h
DungeonsOfNoudar486/res/: #makeppms.sh#  arch.ppm  bars.ppm  begin.ppm  boss0.ppm  boss1.ppm  boss2.ppm  bricks.ppm  bricks2.ppm  bricks3.ppm  ceigbgn.ppm  ceigdr.ppm  ceilbar.ppm  ceilend.ppm  ceilin.ppm  chapter0.txt  chapter6.txt  chapter7.txt  clouds.ppm  cross.ppm  crusad0.ppm  crusad1.ppm  crusad2.ppm  cuco0.ppm  cuco1.ppm  cuco2.ppm  cursorbad0.ppm  cursorgood0.ppm  cursorgood2.ppm  demon0.ppm  demon1.ppm  demon2.ppm  exit.ppm  falcon0.ppm  falcon1.ppm  falcon2.ppm  foe0.ppm  foe1.ppm  foe2.ppm  foe3.ppm  (+57 more)
DungeonsOfNoudar486/resDemo/: map0.txt  tiles0.lst
DungeonsOfNoudar486/src/: CPackedFileReader.cpp  CRenderer.cpp  CRenderer_Rasterization.cpp  CRenderer_Tesselation.cpp  CTile3DProperties.cpp  RasterizerCommon.cpp  VisibilityStrategy.cpp
DungeonsOfNoudar586/: make_palette.py
DungeonsOfNoudar586/DOS-version/: WindowOperations.h
DungeonsOfNoudar586/res/: map3.txt  map6.txt  tiles2.lst
DungeonsOfNoudarNDK/: build.gradle.kts  settings.gradle  settings.gradle.kts
DungeonsOfNoudarNDK/app/: build.gradle  build.gradle.kts
DungeonsOfNoudarNDK/app/src/main/: AndroidManifest.xml
DungeonsOfNoudarNDK/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
DungeonsOfNoudarNDK/gradle/wrapper/: gradle-wrapper.properties
DungeonsOfNoudarSDL/: CMakeLists.txt  Makefile  Makefile.OSX  Makefile.win32
DungeonsOfNoudarSDL/SDL-version/: LoadPNG.cpp  WindowOperationsSDL.cpp  WindowOperationsSDL.cpp~  main.cpp
DungeonsOfNoudarSDL/res/: map0.txt  map1.txt  map2.txt  map3.txt  map4.txt  map5.txt  map6.txt  map_tiles0.txt  tiles.properties  tiles0.prp  tiles1.prp  tiles3.prp  tiles4.lst  tiles4.prp
DungeonsOfNoudarX11/: CMakeLists.txt  Makefile  Makefile.em  Makefile.x11  noudar.wasm  update-coverage.sh
DungeonsOfNoudarX11/X11-version/: LoadPNG.cpp  LoadPNG.h  WindowOperationsX11.cpp  main.cpp  x11.h  x11_emscripten.cpp  x11_native.cpp
DungeonsOfNoudarX11/res/: chapter1.txt  chapter5.txt  chapter7.txt  cube.mtl  fragment.glsl  gameover.txt  map0.txt  map1.txt  map2.txt  map3.txt  map4.txt  map5.txt  map6.txt  map8.txt  map_tiles0.txt  tiles.properties  tiles0.lst  tiles0.prp  tiles1.prp  tiles2.lst  tiles2.prp  tiles3.prp  tiles4.lst  tiles4.prp  tiles5.prp  tiles6.lst  tiles6.prp  tiles8.prp  vertex.glsl  x_victory.mtl
NullSoundSystem/: SoundClip.cpp  SoundClip.h  SoundEmitter.cpp  SoundEmitter.h  SoundListener.cpp  SoundListener.h  SoundUtils.cpp  SoundUtils.h
OpenALSoundSystem/: SoundClip.cpp  SoundEmitter.cpp  SoundListener.cpp  SoundUtils.cpp
Xcode8Project/Dungeons of Noudar OSX/: AppDelegate.h  AppDelegate.m  Info.plist  main.m
Xcode8Project/Dungeons of Noudar OSX/Base.lproj/: MainMenu.xib
Xcode8Project/Dungeons of Noudar.xcodeproj/: project.pbxproj
Xcode8Project/Dungeons of Noudar/Base.lproj/: Main.storyboard
Xcode8Project/Dungeons of Noudar/Data/Assets/: chapter3.txt  chapter4.txt  fragment.glsl  fragment_OSX.glsl  lava.lst  map6.txt  map7.txt  tiles.properties  tiles3.lst  tiles4.prp  tiles5.lst  tiles5.prp  tiles7.lst  vertex.glsl  vertex_OSX.glsl
Xcode8Project/Dungeons of Noudar/Source/: main.mm
docs/: index.md
multiplayer-server/: Makefile  http_client.cpp  pom.xml
noudar-rendering/: Animation.cpp  Animation.h  AnimationStep.cpp  AnimationStep.h  CLerp.cpp  CLerp.h  CTile3DProperties.cpp  CTile3DProperties.h  Camera.cpp  Camera.h  DungeonGL11Renderer.cpp  DungeonGLES2Renderer.cpp  DungeonGLES2Renderer.h  ETextures.h  GameNativeAPI.cpp  GameNativeAPI.h  GraphicNode.cpp  GraphicNode.h  LightningStrategy.cpp  LightningStrategy.h  LoadPNG.cpp  LoadPNG.h  Logger.cpp  Logger.h  NativeBitmap.cpp  NativeBitmap.h  NoudarDungeonSnapshot.cpp  NoudarDungeonSnapshot.h  NoudarGLES2Bridge.cpp  NoudarGLES2Bridge.h  OverlayNanoVGRenderer.cpp  OverlayNanoVGRenderer.h  RenderingJobSnapshotAdapter.cpp  RenderingJobSnapshotAdapter.h  SplatAnimation.cpp  SplatAnimation.h  VBORegister.h  VBORenderingJob.cpp  VBORenderingJob.h  VisibilityStrategy.cpp  (+1 more)
site/: index.html  search.html  sitemap.xml
site/mkdocs/: search_index.json
tests/: Makefile
tests/src/: TestCCharacter.cpp  TestCGame.cpp  TestRenderingJobSnapshotAdapter.cpp  TestVec2i.cpp  TestVisibilityStrategy.cpp
(+201 files in other folders)
